# virtual-cycling-environment

./: .gitignore  .readthedocs.yml  README.md  contributors.txt  vce-container.def
bike-interface/bicycle-model/bikeToEvi/: Makefile  android.py  bikesim.py  calibrate.py  calibration.ini  irspeed.py  irspeedesp32.py  main.py  pyproject.toml  tacx.py  unity.py
docs/: README.md  pyproject.toml  requirements.txt
docs/source/: conf.py  index.rst  references.bib
docs/source/extension_guide/: 3denv.rst  bike-interface.rst  evi.rst  index.rst  protobuf.rst  veins-evi.rst
docs/source/getting_started/: 3denv.rst  apptainer.rst  bikeinterface.rst  evi.rst  index.rst  launcher.rst  multiplayer.rst  sumo.rst  veins.rst
docs/source/hardware_setup/: index.rst
docs/source/scenario_creation/: experiment_creator.rst  from_scratch.rst  index.rst  osm.rst
evi/: .bumpversion.cfg  .coveragerc  .drone.yml  .gitignore  CHANGELOG.md  MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements.txt  setup-evi.sh  setup.cfg  setup.py  tox.ini
evi/docs/: authors.rst  conf.py  configuration.md  design.md  index.rst  requirements.txt  trace_import.md
evi/docs/reference/: evi.rst  modules.rst
evi/integrationtest/: conftest.py  test_routehelper.py  test_util.py
evi/integrationtest/evi/: test_trace_regresseion.py
evi/integrationtest/sumo/: test_interface.py  test_process_handling.py
evi/networks/2021-05-03_dooring-demo/: parkingAreaOnRoad.evi.ini  parkingAreaOnRoad.net.xml  parkingAreaOnRoad.rou.xml  parkingAreaOnRoad.triggers.yaml  parkingAreaOnRoadCyclelane.rou.xml  parkingAreaOnRoadCyclelane.sumo.cfg  parkingAreaOnRoadSharedCyclelane.poly.xml
evi/networks/2022-07-19_bicycle-stream/: Makefile  bicycle-stream.evi.ini  bicycle-stream.net.xml  bicycle-stream.rou.xml  bicycle-stream.sumocfg  reroute-to-leader.evi.ini  reroute-to-leader.net.xml  reroute-to-leader.poly.xml  reroute-to-leader.rou.xml  reroute-to-leader.sumo.cfg  sublane-merge.evi.ini  sublane-merge.net.xml  sublane-merge.rou.xml  sublane-merge.sumo.cfg
evi/networks/circle-scenario/: circle.evi.ini  circle.net.xml  circle.poly.xml  circle.rou.xml  circle.sumo.cfg  road_id_mapping.csv
evi/networks/erlangen/: erlangen.evi.ini  erlangen.net.xml  erlangen.sumo.cfg
evi/networks/paderborn-hynets/: asm-replay-2022-03-09.csv  asm-replay_2018-06-07.csv  asm-replay_2018-10-11.csv  asm-replay_2020-04-08.csv  boundaries.txt  (+10 more)
evi/scripts/: dump_repro_trace.py  evid.py  map_ids.py  pcapreplay.py  port_announcer.sh  port_waiter.sh  veins_trace_replay.py
evi/tests/: test_asynctraci.py  test_filtering.py  test_proto.py  test_protocol_dummy.py  test_util.py
scripts/grid-generator/: Makefile  README.md  setup.cfg
(+534 files in other folders)
