[metadata]
name = vcegrid
version = 0.0.1
description = "Tools for creating VCE scenarios. Specifically, grid scenarios with levels, SUMO triggers, and points of interest for psychological trials."

[options]
packages = find:
install_requires =
    numpy
    sumolib
    evi
    PyYAML
    lxml
    networkx
